Fix error with multiple nested partition columns on Iceberg (#24629)